[package]
name = "jce"
version = "0.1.0"
edition = "2021"
authors = ["LaoLittle"]
description = "Jce implementation in Rust"
readme = "README.md"
keywords = ["jce", "serialization", "encoding"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/LaoLittle/rust-jce"
repository = "https://github.com/LaoLittle/rust-jce"

[dependencies]
bytes = "1"

[dependencies.jce-derive]
version = "0"
path = "jce-derive"
