[package]
name = "jce-derive"
version = "0.1.0"
edition = "2021"
authors = ["LaoLittle"]
description = "Jce implementation in Rust"
readme = "README.md"
keywords = ["jce", "serialization", "encoding"]
license = "MIT or APACHE-2.0"
homepage = "https://github.com/LaoLittle/rust-jce"
repository = "https://github.com/LaoLittle/rust-jce"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.3", features = [ "extra-traits" ] }
